[package]
name = "heng_rs"
version = "0.1.0"
authors = ["fakeshadow <24548779@qq.com>"]
edition = "2018"
keywords = ["scheduler"]
description = "schedule task runner on tokio-runtime"
license = "MIT"
exclude = ["examples/*"]
repository = "https://github.com/fakeshadow/heng_rs"
readme= "README.md"

[lib]
name = "heng_rs"
path = "src/lib.rs"

[workspace]
members = [
  "examples/basic",
]

[dependencies]
futures-channel-preview = { version = "0.3.0-alpha.19", features = ["sink"], default-features = false }
futures-util-preview = { version = "0.3.0-alpha.19", default-features = false }
tokio-executor = "0.2.0-alpha.6"
tokio-timer = "0.3.0-alpha.6"

[dev-dependencies]
tokio = "0.2.0-alpha.6"