[package]
name = "heng_rs"
version = "0.1.0"
authors = ["fakeshadow <24548779@qq.com>"]
edition = "2018"
keywords = ["scheduler"]
description = "schedule task runner on tokio-runtime"
license = "MIT"
exclude = ["examples/*"]
repository = "https://github.com/fakeshadow/heng_rs"
readme= "README.md"

[lib]
name = "heng_rs"
path = "src/lib.rs"

[workspace]
members = [
  "examples/basic",
]

[dependencies.futures-channel]
version = "0.3.4"
features = ["sink"]

[dependencies.futures-util]
version = "0.3.4"
features = ["sink"]
default-features = false

[dependencies.tokio]
version = "0.2.16"
default-features = false
features = [ "rt-core", "time" ]

[dev-dependencies]
tokio = { version = "0.2.16", default-features = false, features = [ "macros" ] }
futures-util = { version = "0.3.4" }