[package]
name = "heng_rs"
version = "0.1.0"
authors = ["fakeshadow <24548779@qq.com>"]
edition = "2018"
keywords = ["scheduler"]
description = "schedule task runner on tokio-runtime"
license = "MIT"
exclude = ["examples/*"]
repository = "https://github.com/fakeshadow/heng_rs"
readme= "README.md"

[lib]
name = "heng_rs"
path = "src/lib.rs"

[workspace]
members = [
  "examples/basic",
]

[features]
default = ["with-tokio"]
with-tokio = ["tokio/time", "tokio/rt-threaded"]
with-async-std = ["async-std/unstable"]
with-smol = ["smol"]

[dependencies.async-std]
version = "1.5.0"
optional = true

[dependencies.futures-channel]
version = "0.3.4"
features = ["sink"]

[dependencies.futures-util]
version = "0.3.4"
features = ["sink"]
default-features = false

[dependencies.tokio]
version = "0.2.16"
default-features = false
optional = true

[dependencies.smol]
version = "0.1.4"
optional = true

[dev-dependencies]
tokio = { version = "0.2.16", default-features = false, features = [ "macros" ] }
futures-util = { version = "0.3.4" }